# hipfort

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  SPECIFICATIONS.md  SUPPORTED_API.html  SUPPORTED_API.md
.azuredevops/: rocm-ci.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: issue_report.yml
cmake/Modules/: SetCompileFlag.cmake  SetFortranFlags.cmake  rocm-cmake.cmake
docs/: .gitignore  Doxyfile  Makefile  annotated.html  api.rst  bug.html  classes.html  clean-module-files.sh  conf.py  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_b7825bbd13b32a8f5a7f6eb81b6582d9.html  dir_dae15a2fb2165dceaba8692c6854b314.html  files.html  formula.repository  functions.html  functions_c.html  functions_d.html  functions_e.html  functions_func.html  functions_func_h.html  functions_func_r.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_vars.html  functions_w.html  functions_x.html  functions_y.html  functions_z.html  group__Callback.html  hipfort.doxygen  hipfort_8f03.html  (+6686 more)
docs/.doxygen/: Doxyfile
docs/.sphinx/: .gitignore  _toc.yml.in  requirements.in  requirements.txt
docs/developer_guide/: contributing.md  specifications.md
docs/doxygen/: .gitignore  Doxyfile
docs/how-to/: using-hipfort.rst
docs/how_to_guides/: getting_started.md
docs/html/: classes.html  dir_dae15a2fb2165dceaba8692c6854b314.html  functions.html  functions_y.html  hipfort__rocsparse_8f03.html  hipfort__rocsparse__enums_8f03.html  interfacehipfort_1_1hipchoosedevice-members.html  interfacehipfort_1_1hipcreatetextureobject-members.html  interfacehipfort_1_1hipctxgetapiversion.html  interfacehipfort_1_1hipctxpopcurrent.html  interfacehipfort_1_1hipdestroytextureobject.html  interfacehipfort_1_1hipdevicecomputecapability.html  interfacehipfort_1_1hipdevicegetcacheconfig-members.html  interfacehipfort_1_1hipdevicegetstreampriorityrange-members.html  interfacehipfort_1_1hipdeviceprimaryctxrelease-members.html  interfacehipfort_1_1hipdeviceprimaryctxrelease.html  interfacehipfort_1_1hipdevicesynchronize.html  interfacehipfort_1_1hipdrivergetversion-members.html  interfacehipfort_1_1hipdrvmemcpy3d.html  interfacehipfort_1_1hipeventcreatewithflags-members.html  interfacehipfort_1_1hipfreearray.html  interfacehipfort_1_1hipfreehost-members.html  interfacehipfort_1_1hipfuncgetattribute.html  interfacehipfort_1_1hipfuncsetsharedmemconfig-members.html  interfacehipfort_1_1hipgettextureobjectresourcedesc.html  interfacehipfort_1_1hiphostgetdevicepointer.html  interfacehipfort_1_1hiphostunregister-members.html  interfacehipfort_1_1hipipcclosememhandle.html  interfacehipfort_1_1hipipcopenmemhandle-members.html  interfacehipfort_1_1hiplaunchbyptr-members.html  interfacehipfort_1_1hipmalloc3d-members.html  interfacehipfort_1_1hipmallocpitch-members.html  interfacehipfort_1_1hipmemcpy2dtoarray.html  interfacehipfort_1_1hipmemcpy3d.html  interfacehipfort_1_1hipmemcpyfromarray-members.html  interfacehipfort_1_1hipmemcpyfromsymbolasync.html  interfacehipfort_1_1hipmemprefetchasync-members.html  interfacehipfort_1_1hipmemptrgetinfo.html  interfacehipfort_1_1hipmemset2dasync.html  (+670 more)
lib/: CMakeLists.txt  hipfort-config.cmake.in
lib/hip/: cuda_errors.f  hip.f  hip_check.f  hip_enums.f  hip_types.f  hipblas.f  hipblas_enums.f  hipfft.f  hipfft_enums.f  hipfort.f  hipfort_cuda_errors.f  hipfort_enums.f  hipfort_hipfft.f  hipfort_hipsparse.f  hipfort_rocblas_enums.f  hipfort_rocfft.f  hipfort_rocfft_enums.f  hipfort_rocsolver_enums.f  hipsparse.f  hipsparse_enums.f  rocblas.f  rocblas_enums.f  rocfft.f  rocfft_enums.f  rocsolver.f  rocsolver_enums.f  rocsparse.f  rocsparse_enums.f
lib/hipfort/: SUPPORTED_API_HIP.md  SUPPORTED_API_HIPBLAS.md  SUPPORTED_API_HIPFFT.md  SUPPORTED_API_HIPRAND.md  SUPPORTED_API_HIPSOLVER.md  SUPPORTED_API_HIPSPARSE.md  SUPPORTED_API_ROCBLAS.md  SUPPORTED_API_ROCFFT.md  SUPPORTED_API_ROCRAND.md  SUPPORTED_API_ROCSOLVER.md  SUPPORTED_API_ROCSPARSE.md  hipfort.f  hipfort_auxiliary.f  hipfort_check.f  hipfort_cuda_errors.f  hipfort_enums.f  hipfort_hipblas.f  hipfort_hipblas_auxiliary.f  hipfort_hipblas_enums.f  hipfort_hipfft.f  hipfort_hipfft_enums.f  hipfort_hiphostregister.f  hipfort_hipmalloc.f  hipfort_hipmemcpy.f  hipfort_hiprand.f  hipfort_hiprand_enums.f  hipfort_hipsolver.f  hipfort_hipsolver_enums.f  hipfort_hipsparse.f  hipfort_hipsparse_enums.f  hipfort_rocblas.f  hipfort_rocblas_auxiliary.f  hipfort_rocblas_enums.f  hipfort_rocfft.f  hipfort_rocfft_enums.f  hipfort_rocrand.f  hipfort_rocrand_enums.f  hipfort_rocsolver.f  hipfort_rocsolver_enums.f  hipfort_rocsparse.f  (+4 more)
lib/modules-amdgcn/: rocblas_module.f90  rocsparse_module.f90
lib/util/: iso_c_binding_ext.c  iso_c_binding_ext.f03
test/: CMakeLists.txt  Makefile  Makefile.in
test/f2003/hipblas/: Makefile  cgemm.f03  dgemm.f03  dger.f03  dscal.f03  saxpy.f03  scopy.f03  sgemv.f03  sger.f03  sswap.f03
test/f2003/hipfft/: hipfft.f03
test/f2003/rocblas/: Makefile  saxpy.f03
test/f2003/rocfft/: rocfft.f03
test/f2003/rocsolver/: Makefile  rocsolver_dgeqrf.f03
test/f2003/rocsparse/: Makefile  ddoti.f03
test/f2003/roctx/: Makefile  hip_implementation.cpp  main.f03
test/f2003/vecadd/: hip_implementation.cpp  main.f03
test/f2008/hipblas/: Makefile  cgemm.f03  dgemm.f03  dscal.f03  saxpy.f03  scopy.f03  sswap.f03
test/f2008/hipfft/: hipfft.f03
test/f2008/hipsolver/: Makefile  hipsolverdgetrf.f03
test/f2008/rocblas/: Makefile  saxpy.f03
test/f2008/rocfft/: Makefile  rocfft.f03
test/f2008/rocsparse/: Makefile  ddoti.f03
test/f2008/vecadd/: main.f03
test/fft/: rocfft.f03
test/hipblas/: Makefile  cgemm.f03  dgemm.f03  dger.f03  dscal.f03  saxpy.f03  sgemv.f03  sger.f03
test/hipfft/: .gitignore  Makefile
test/rocblas/: Makefile  saxpy.f03
test/rocfft/: Makefile  rocfft.f03
test/rocsparse/: Makefile  ddoti.f03
test/vecadd/: Makefile  hip_implementation.cpp  main.f03
(+863 files in other folders)
